--- a/src/main/webapp/WEB-INF/css/main.css
+++ b/src/main/webapp/WEB-INF/css/main.css
@@ -78,6 +78,10 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
+.center {
+    text-align: center;
+}
+
 .pagination {
     display: inline-block;
 }
@@ -87,4 +91,13 @@ tr:nth-child(even) {
     float: left;
     padding: 8px 16px;
     text-decoration: none;
+    transition: background-color .3s;
+    border: 1px solid #ddd;
+    margin: 0 4px;
+}
+
+.pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border: 1px solid #4CAF50;
 }
